src/snapshots/gitu__tests__new_file.snap
---
source: src/main.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 70, height: 5 },
    content: [
        "                                                                      ",
        "🢒Untracked files                                                      ",
        " new-file                                                             ",
        "                                                                      ",
        " Recent commits                                                       ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Rgb(216, 166, 87), bg: Rgb(80, 73, 69), underline: Reset, modifier: BOLD,
        x: 16, y: 1, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Rgb(42, 40, 39), underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Rgb(234, 105, 98), bg: Rgb(42, 40, 39), underline: Reset, modifier: BOLD,
        x: 9, y: 2, fg: Reset, bg: Rgb(42, 40, 39), underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Rgb(216, 166, 87), bg: Reset, underline: Reset, modifier: BOLD,
        x: 15, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
