src/snapshots/gitu__tests__push.snap
---
source: src/lib.rs
expression: "redact_hashes(terminal2, &state2.repo)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 10 },
    content: [
        "🢒On branch main                                             ",
        " Your branch is up to date with 'origin/main'.              ",
        "                                                            ",
        " Recent commits                                             ",
        " _______ main add second-file                               ",
        "                                                            ",
        "                                                            ",
        "────────────────────────────────────────────────────────────",
        "$ git push                                                  ",
        "Pushed to origin                                            ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Rgb(216, 166, 87), bg: Rgb(80, 73, 69), underline: Reset, modifier: BOLD,
        x: 15, y: 0, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Rgb(42, 40, 39), underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Rgb(216, 166, 87), bg: Reset, underline: Reset, modifier: BOLD,
        x: 15, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Rgb(216, 166, 87), bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 4, fg: Rgb(169, 182, 101), bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Rgb(80, 73, 69), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Rgb(125, 174, 163), bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
