src/snapshots/gitu__tests__show.snap
---
source: src/lib.rs
expression: "redact_hashes(terminal, dir)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 20 },
    content: [
        " commit ________________________________________            ",
        " Author: CI <ci@example.com>                                ",
        " Date:   Sun, 18 Feb 2024 14:00:00 +0100                    ",
        "                                                            ",
        "     add firstfile                                          ",
        "                                                            ",
        "     Commit body goes here                                  ",
        "                                                            ",
        " firstfile                                                  ",
        "🢒@@ -0,0 +1 @@                                              ",
        " +This should be visible                                    ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Rgb(216, 166, 87), bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Rgb(125, 174, 163), bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 14, y: 9, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Reset, bg: Rgb(42, 40, 39), underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Rgb(169, 182, 101), bg: Rgb(42, 40, 39), underline: Reset, modifier: NONE,
        x: 24, y: 10, fg: Reset, bg: Rgb(42, 40, 39), underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
